--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
             "value": "UTC"
         },
         "SALIENS_USER_AGENT": {
-	    "description": "Set to 0 or 1 | 1 = True 0 = False | setting to true will use a user-agent pertaining to the cheat, instead of a generic browser user-agent."
+	    "description": "Set to 0 or 1 | 1 = True 0 = False | setting to true will use a user-agent pertaining to the cheat, instead of a generic browser user-agent.",
 	    "value": "1"
 	}
     },
